samples/_failures_safe/1761528188_237d07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81ec4878.c: In function ‘main’:
./samples/SAFE/__tmp_81ec4878.c:166:5: error: expected identifier or ‘(’ at end of input
  166 |     int
      |     ^~~
./samples/SAFE/__tmp_81ec4878.c:166:5: error: expected declaration or statement at end of input
